objects/Car_Company__c.object
<CustomObject>
    <label>Car Company</label>
    <nameField>
        <label>Car Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Car Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Monthly_revenue__c</fullName>
        <label>Monthly revenue</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_company__c</fullName>
        <formula>IF( Monthly_revenue__c  &gt; 100000, true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Premium company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Established_date__c</fullName>
        <label>Established date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_number_of_products__c</fullName>
        <label>Total number of products</label>
        <summarizedField>Car__c.Registration_number__c</summarizedField>
        <summaryForeignKey>Car__c.Car_Company__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>